--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "example",
+  "name": "react-neshanmaps-openlayers-usage-code",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
